--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <!-- zaruru nhi h humeheha table row likho...basically you only need it when you require two rows-->
-    <td><img src="C:\Users\ritik\WEB_DEV\HTML-Personal Site\images\RitikaImage.png" alt="Ritika's Profile Picture" height="210" width="180"></td>
+    <td><img src="C:\Users\ritik\WEB_DEV\HTML-Personal Site\RitikaImage.png" alt="Ritika's Profile Picture" height="210" width="180"></td>
     <td><h1>Ritika Nagar</h1>
     <p><i>Undergrad at <strong><a href="https://www.iiitd.ac.in/">IIITD</a></strong></i></p> <!-- strong tag gives importance to that particular word..whereas bold tag only bolds it -->
     <p><em> Computer Science Enjneering</em></p>
